# Customer-Intelligence-API

./: .gitignore  pyproject.toml  requirements.txt
app/: db.py  main.py
app/models/: account.py  activity.py  deal.py  lead.py  opportunity.py  user.py
app/routes/: accounts.py  activities.py  deals.py  leads.py  opportunities.py  user.py
app/tests/: db_test.py
app/utils/: logger.py  search.py
